--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/lib/iosweblinks"]
 	path = vendor/lib/iosweblinks
-	url = https://github.com/stylr/iosweblinks.git
+	url = https://github.com/kongakong/iosweblinks.git
