--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "fetch-mock": "^7.0.5",
     "jest": "^23.6.0",
+    "react-svg-loader": "^2.1.0",
     "react-test-renderer": "^16.5.2",
     "redux-mock-store": "^1.5.3",
     "webpack-dev-server": "2.11.2"
