--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
+    "caniuse-lite": "^1.0.30000989",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
@@ -16,7 +18,8 @@
     "react-redux": "^5.1.2",
     "react-svg-loader": "^2.1.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack": "^3.12.0"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
@@ -25,6 +28,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "fetch-mock": "^7.0.5",
     "jest": "^23.6.0",
+    "node-fetch": "^2.6.0",
     "react-test-renderer": "^16.5.2",
     "redux-mock-store": "^1.5.3",
     "webpack-dev-server": "2.11.2"
