--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/application.jsx --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "failure:js": "rm ./app/assets/builds/application.js && rm ./app/assets/builds/application.js.map",
+    "dev": "tsc-watch --noClear --noEmit --allowJs --jsx preserve --skipLibCheck --lib es2020,dom --onSuccess \"yarn build\" --onFailure \"yarn failure:js\" app/javascript/application.jsx"
+  },
+  "devDependencies": {
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.6.4"
   }
 }
